--- a/template/welcome.html
+++ b/template/welcome.html
@@ -45,13 +45,14 @@
     </div>
 
     <div id="middle-of-page">
-        <p id="time"></p>
+        <p id="time"> (time) </p>
 
         <hr>
         
         <h3>You can order tacos</h3>
         <img src="https://img1.cookinglight.timeinc.net/sites/default/files/styles/medium_2x/public/1519665233/slow-cooker-carnitas-tacos-ck-1804p38.jpg" alt="tacos" width="25%">
         <p>Click here to <a href="/tacos">order tacos</a>, You ask for a TACO, we choose the filling for you!</p>
+        <p>Check out <a href="/fillings" target="_blank">fillings</a>.  This link will open in a new tab.</p>
         
         <hr>
         
